--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="dark_theme_summary_on">Currently using dark night theme</string>
     <string name="dark_theme_summary_off">Currently using light day theme</string>
     <string name="delete">Delete</string>
+    <string name="select_all">Select all</string>
     <string name="dns_servers">DNS servers</string>
     <string name="edit">Edit</string>
     <string name="endpoint">Endpoint</string>
