Extract error messages to string resources
Useful for validation errors and localisation later on

Signed-off-by: Harsh Shandilya <harsh@prjkt.io>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,18 @@
     <string name="tunnel_name">Tunnel Name</string>
     <string name="tunnel_rename_error">Unable to rename tunnel: %s</string>
     <string name="tunnel_rename_success">Successfully renamed tunnel to “%s”</string>
+    <string name="tunnel_error_invalid_name">Invalid name</string>
+    <string name="tunnel_error_already_exists">Tunnel %s already exists</string>
+    <string name="tunnel_error_empty_inetaddress">Empty address</string>
+    <string name="tunnel_error_empty_interface_address">Address is empty</string>
+    <string name="tunnel_error_interface_parse_failed">Unable to parse line: “%s”</string>
+    <string name="tunnel_error_forbidden_endpoint_chars">Forbidden characters in endpoint</string>
+    <string name="tunnel_error_empty_peer_public_key">Peer public key may not be empty</string>
+    <string name="tunnel_error_invalid_config_line">Invalid configuration line: %s</string>
+    <string name="tunnel_error_no_config_information">Could not find any config information</string>
+    <string name="key_length_base64_exception_message">WireGuard base64 keys must be 44 characters encoding 32 bytes</string>
+    <string name="key_length_exception_message">WireGuard keys must be 32 bytes</string>
+    <string name="key_length_hex_exception_message">WireGuard hex keys must be 64 characters encoding 32 bytes</string>
     <string name="version_title">WireGuard for Android v%s"</string>
     <string name="version_summary">%s backend v%s</string>
     <string name="version_summary_checking">Checking %s backend version</string>
