Clean up error messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,25 +28,41 @@
     <string name="addresses">Addresses</string>
     <string name="allowed_ips">Allowed IPs</string>
     <string name="app_name">WireGuard</string>
+    <string name="bad_config_context">%s\'s %s</string>
+    <string name="bad_config_context_top_level">%s</string>
+    <string name="bad_config_error">%s in %s</string>
+    <string name="bad_config_explanation_pka">: Must be positive and no more than 65535</string>
+    <string name="bad_config_explanation_positive_number">: Must be positive</string>
+    <string name="bad_config_explanation_udp_port">: Must be a valid UDP port number</string>
+    <string name="bad_config_reason_invalid_key">Invalid key</string>
+    <string name="bad_config_reason_invalid_number">Invalid number</string>
+    <string name="bad_config_reason_invalid_value">Invalid value</string>
+    <string name="bad_config_reason_missing_attribute">Missing attribute</string>
+    <string name="bad_config_reason_missing_section">Missing section</string>
+    <string name="bad_config_reason_missing_value">Missing value</string>
+    <string name="bad_config_reason_syntax_error">Syntax error</string>
+    <string name="bad_config_reason_unknown_attribute">Unknown attribute</string>
+    <string name="bad_config_reason_unknown_section">Unknown section</string>
+    <string name="bad_config_reason_value_out_of_range">Value out of range</string>
     <string name="bad_extension_error">File must be .conf or .zip</string>
     <string name="cancel">Cancel</string>
     <string name="config_delete_error">Cannot delete configuration file %s</string>
-    <string name="config_exists_error">Configuration for %s already exists</string>
-    <string name="config_file_exists_error">Configuration file %s already exists</string>
-    <string name="config_not_found_error">Configuration file %s not found</string>
-    <string name="config_rename_error">Cannot rename configuration file %s</string>
-    <string name="config_save_error">Unable to save configuration for “%1$s”: %2$s</string>
+    <string name="config_exists_error">Configuration for “%s” already exists</string>
+    <string name="config_file_exists_error">Configuration file “%s” already exists</string>
+    <string name="config_not_found_error">Configuration file “%s” not found</string>
+    <string name="config_rename_error">Cannot rename configuration file “%s”</string>
+    <string name="config_save_error">Cannot save configuration for “%1$s”: %2$s</string>
     <string name="config_save_success">Successfully saved configuration for “%s”</string>
     <string name="create_activity_title">Create WireGuard Tunnel</string>
-    <string name="create_bin_dir_error">Could not create local binary directory</string>
+    <string name="create_bin_dir_error">Cannot create local binary directory</string>
     <string name="create_empty">Create from scratch</string>
     <string name="create_from_file">Create from file or archive</string>
-    <string name="create_from_qrcode">Create from QR code</string>
+    <string name="create_from_qr_code">Create from QR code</string>
     <string name="create_output_dir_error">Cannot create output directory</string>
-    <string name="create_temp_dir_error">Could not create local temporary directory</string>
+    <string name="create_temp_dir_error">Cannot create local temporary directory</string>
     <string name="create_tunnel">Create Tunnel</string>
-    <string name="dark_theme_summary_off">Currently using light day theme</string>
-    <string name="dark_theme_summary_on">Currently using dark night theme</string>
+    <string name="dark_theme_summary_off">Currently using light (day) theme</string>
+    <string name="dark_theme_summary_on">Currently using dark (night) theme</string>
     <string name="dark_theme_title">Use dark theme</string>
     <string name="delete">Delete</string>
     <string name="deselect_all">Deselect All</string>
@@ -59,28 +75,25 @@
     <string name="error_up">Error bringing up tunnel: %s</string>
     <string name="exclude_private_ips">Exclude private IPs</string>
     <string name="excluded_applications">Excluded Applications</string>
-    <string name="exit_status_read_error">Unable to read exit status</string>
     <string name="generate">Generate</string>
+    <string name="generic_error">Unknown “%s” error</string>
     <string name="hint_automatic">(auto)</string>
     <string name="hint_generated">(generated)</string>
     <string name="hint_optional">(optional)</string>
     <string name="hint_random">(random)</string>
-    <string name="horizontal_expand_error">Action labels in horizontal expand orientation is not supported.</string>
-    <string name="illegal_filename_error">Illegal file name %s</string>
+    <string name="illegal_filename_error">Illegal file name “%s”</string>
     <string name="import_error">Unable to import tunnel: %s</string>
-    <string name="import_from_qrcode">Import Tunnel from QR Code</string>
+    <string name="import_from_qr_code">Import Tunnel from QR Code</string>
     <string name="import_success">Imported “%s”</string>
     <string name="interface_title">Interface</string>
-    <string name="invalid_config_error">Invalid config passed to %s</string>
-    <string name="key_length_base64_exception_message">WireGuard base64 keys must be 44 characters encoding 32 bytes</string>
-    <string name="key_length_exception_message">WireGuard keys must be 32 bytes</string>
-    <string name="key_length_hex_exception_message">WireGuard hex keys must be 64 characters encoding 32 bytes</string>
+    <string name="key_length_explanation_base64">: WireGuard base64 keys must be 44 characters (32 bytes)</string>
+    <string name="key_length_explanation_binary">: WireGuard keys must be 32 bytes</string>
+    <string name="key_length_explanation_hex">: WireGuard hex keys must be 64 characters (32 bytes)</string>
     <string name="listen_port">Listen port</string>
     <string name="log_export_error">Unable to export log: %s</string>
-    <string name="log_export_success">Saved to %s</string>
+    <string name="log_export_success">Saved to “%s”</string>
     <string name="log_export_summary">Log file will be saved to downloads folder</string>
-    <string name="log_exporter_title">Export log file</string>
-    <string name="marker_count_error">Expected 4 markers, received %i</string>
+    <string name="log_export_title">Export log file</string>
     <string name="module_version_error">Unable to determine kernel module version</string>
     <string name="mtu">MTU</string>
     <string name="multiple_tunnels_error">Only one userspace tunnel can run at a time</string>
@@ -88,7 +101,12 @@
     <string name="no_config_error">Trying to bring up a tunnel with no config</string>
     <string name="no_configs_error">No configurations found</string>
     <string name="no_tunnels_error">No tunnels exist</string>
-    <string name="parse_error">Cannot parse “%1$s” at %2$s</string>
+    <string name="parse_error_generic">string</string>
+    <string name="parse_error_inet_address">IP address</string>
+    <string name="parse_error_inet_endpoint">endpoint</string>
+    <string name="parse_error_inet_network">IP network</string>
+    <string name="parse_error_integer">number</string>
+    <string name="parse_error_reason">Cannot parse %1$s “%2$s”</string>
     <string name="peer">Peer</string>
     <string name="permission_description">Allows an app to control WireGuard tunnels. Apps with this permission may enable and disable WireGuard tunnels at will, potentially misdirecting Internet traffic.</string>
     <string name="permission_label">control WireGuard tunnels</string>
@@ -97,13 +115,15 @@
     <string name="private_key">Private key</string>
     <string name="public_key">Public key</string>
     <string name="public_key_description">Public key</string>
-    <string name="qrcode_hint">Tip: generate with `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
+    <string name="qr_code_hint">Tip: generate with `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
     <string name="restore_on_boot_summary">Bring up previously-enabled tunnels on boot</string>
     <string name="restore_on_boot_title">Restore on boot</string>
     <string name="save">Save</string>
     <string name="select_all">Select all</string>
     <string name="set_exclusions">Set Exclusions</string>
     <string name="settings">Settings</string>
+    <string name="shell_exit_status_read_error">Shell cannot read exit status</string>
+    <string name="shell_marker_count_error">Shell expected 4 markers, received %i</string>
     <string name="shell_start_error">Shell failed to start: %i</string>
     <string name="toggle_error">Error toggling WireGuard tunnel: %s</string>
     <string name="tools_installer_already">wg and wg-quick are already installed</string>
@@ -120,10 +140,7 @@
     <string name="tunnel_config_error">Unable to configure tunnel (wg-quick returned %i)</string>
     <string name="tunnel_create_error">Unable to create tunnel: %s</string>
     <string name="tunnel_create_success">Successfully created tunnel “%s”</string>
-    <string name="tunnel_error_already_exists">Tunnel %s already exists</string>
-    <string name="tunnel_error_empty_interface_address">Address is empty</string>
-    <string name="tunnel_error_empty_peer_public_key">Peer public key may not be empty</string>
-    <string name="tunnel_error_forbidden_endpoint_chars">Forbidden characters in endpoint</string>
+    <string name="tunnel_error_already_exists">Tunnel “%s” already exists</string>
     <string name="tunnel_error_invalid_name">Invalid name</string>
     <string name="tunnel_list_placeholder">Add a tunnel using the blue button</string>
     <string name="tunnel_name">Tunnel Name</string>
@@ -132,14 +149,17 @@
     <string name="tunnel_rename_success">Successfully renamed tunnel to “%s”</string>
     <string name="type_name_go_userspace">Go userspace</string>
     <string name="type_name_kernel_module">Kernel module</string>
+    <string name="unknown_error">Unknown error</string>
     <string name="version_summary">%1$s backend v%2$s</string>
     <string name="version_summary_checking">Checking %s backend version</string>
     <string name="version_summary_unknown">Unknown %s version</string>
-    <string name="version_title">WireGuard for Android v%s"</string>
-    <string name="vpn_not_authed_error">VPN service not authorized by user</string>
+    <string name="version_title">WireGuard for Android v%s</string>
+    <string name="vpn_not_authorized_error">VPN service not authorized by user</string>
     <string name="vpn_start_error">Unable to start Android VPN service</string>
     <string name="zip_export_error">Unable to export tunnels: %s</string>
-    <string name="zip_export_success">Saved to %s</string>
+    <string name="zip_export_success">Saved to “%s”</string>
     <string name="zip_export_summary">Zip file will be saved to downloads folder</string>
-    <string name="zip_exporter_title">Export tunnels to zip file</string>
+    <string name="zip_export_title">Export tunnels to zip file</string>
+    <string name="key_length_error">Incorrect key length</string>
+    <string name="key_contents_error">Bad characters in key</string>
 </resources>
