--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,6 +144,13 @@
     <string name="tools_installer_title">Install command line tools</string>
     <string name="tools_installer_working">Installing wg and wg-quick</string>
     <string name="tools_unavailable_error">Required tools unavailable</string>
+    <string name="transfer">Transfer</string>
+    <string name="transfer_rx_tx">rx: %s, tx: %s</string>
+    <string name="transfer_bytes">%d B</string>
+    <string name="transfer_kibibytes">%.2f KiB</string>
+    <string name="transfer_mibibytes">%.2f MiB</string>
+    <string name="transfer_gibibytes">%.2f GiB</string>
+    <string name="transfer_tibibytes">%.2f TiB</string>
     <string name="tun_create_error">Unable to create tun device</string>
     <string name="tunnel_config_error">Unable to configure tunnel (wg-quick returned %d)</string>
     <string name="tunnel_create_error">Unable to create tunnel: %s</string>
